Fixed CSS again, in a way that works in Firefox (seems to be a bug with form fields, so wrapped a div). Boxes now line up!

--- a/Chat/Chat.css
+++ b/Chat/Chat.css
@@ -65,18 +65,29 @@
     position: absolute;
     bottom: 20px;
     height: 50px;
-    width: 100%;
+    width: 70%;
+}
+
+#message-box {
+    position: absolute;
+    left: 0;
+    right: 115px;
+    padding: 0;
+    margin: 0;
 }
 
 #new-message {
     font-family: Trebuchet MS;
     padding: 5px;
     border: 1px solid #ccc;
-    width: 70%;
+    width: 100%;
 }
 
 #send {
    padding: 5px;
+   position: absolute;
+   right: 0;
+   width: 100px;
 }
 
 .error {
